--- a/flex/05-flex-modal/index.html
+++ b/flex/05-flex-modal/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,71 @@
   <link rel="stylesheet" href="style.css">
   <title>Modal</title>
 </head>
+
+<!-- //solution 1// -->
+
 <body>
   <div class="modal">
-    <div class="icon">!</div>
-    <div class="header">Are you sure you want to do that?</div>
-    <div class="close-button">✖</div>
-    <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
-    <button class="continue">Continue</button>
-    <button class="cancel">Cancel</button>
+
+    <div class="left">
+      <div class="icon">!</div>
+    </div>
+
+
+    <div class="center">
+      <div class="header">Are you sure you want to do that?</div>
+
+      <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam
+        minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem
+        consectetur
+        sequi amet aspernatur cumque!</div>
+      <div class="buttons">
+        <button class="continue">Continue</button>
+        <button class="cancel">Cancel</button>
+      </div>
+    </div>
+
+
+
+
+    <div class="right">
+      <div class="close-button">✖</div>
+    </div>
+
+
+
+
   </div>
 </body>
+
+<!-- SOLUTION 2 
+  <body>
+
+
+  <div class="modal">
+
+
+
+    <div class="icon">!</div>
+
+
+
+    <div class="container">
+      <div class="header">Are you sure you want to do that?
+        <div class="close-button">✖</div>
+      </div>
+      <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam
+        minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem
+        consectetur sequi amet aspernatur cumque!</div>
+      <button class="continue">Continue</button>
+      <button class="cancel">Cancel</button>
+    </div>
+
+
+
+  </div>
+
+
+</body> -->
+
 </html>
